--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <img src="images/hardy.png" alt="">
         </div>
     </header>
-    <main>f
+    <main>
         <section class="about">
             <h3 class="head">About Me</h3>
             <p class="description">I, m a designer & developer with a passion for web design. I enjoy developing simple,
@@ -44,27 +44,52 @@
                 requirements in our data.</p>
             <div class="about-container">
                 <div class="about-info">
-                    <p class="about-title">Name</p>
+                    <p class="about-title">Name:</p>
                     <p class="about-description">Mary Hardy</p>
                 </div>
                 <div class="about-info">
-                    <p class="about-title">Email</p>
+                    <p class="about-title">Email:</p>
                     <p class="about-description">info@gmail.com</p>
                 </div>
                 <div class="about-info">
-                    <p class="about-title">Date of birth</p>
+                    <p class="about-title">Date of birth:</p>
                     <p class="about-description">11 November</p>
                 </div>
                 <div class="about-info">
-                    <p class="about-title">From</p>
+                    <p class="about-title">From:</p>
                     <p class="about-description">los Angeles,USA</p>
                 </div>
 
             </div>
         </section>
+        <section class="what-i-do">
+            <h3 class="head">What I Do</h3>
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="images/icons/js.png">
+                    <p class="skill-title">Vanilla JavaScript</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png">
+                    <p class="skill-title">Node.js</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png">
+                    <p class="skill-title">MongoDB</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
+        <section class="resume">
 
-
-
+        </section>
     </main>
     <footer>
 
