--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         </section>
         <section class="what-i-do">
             <h3 class="head">What I Do</h3>
+            <p class="what-i-do-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
             <div class="skill-container">
                 <div class="skill">
                     <img src="images/icons/js.png">
@@ -145,12 +146,33 @@
             </div>
         </section>
         
+        
     </main>
     <footer>
-
+        <section class="contact">
+            <div>
+                <h3 class="contact-title">Lets Contact</h3>
+                <p class="contact-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8:00 P.M ET,Monday through Friday.</p>
+                <a href="">
+                    <img src="images/icons/facebook.png">
+                </a>
+                <a href="">
+                    <img src="images/icons/twitter.png">
+                </a>
+                <a href="">
+                    <img src="images/icons/insta.png">
+                </a>
+            </div>
+            <div>
+                <h3 class="contact-title">Let's Message me</h3>
+                <form>
+                    <input class="form-box" type="text" placeholder="your Name">
+                    <input class="form-box" type="email" placeholder="your Email">
+                    <textarea class="form-text" name="" id="" cols="30" rows="10" placeholder="message"></textarea>
+                </form>             
+                <input class="button" type="submit" value="submit">  
+            </div>
+        </section>
     </footer>
-
-
 </body>
-
 </html>
