--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
             <div>
                 <h3 class="contact-title">Let's Message me</h3>
                 <form>
-                    <input class="form-box" type="text" placeholder="your Name">
-                    <input class="form-box" type="email" placeholder="your Email">
-                    <textarea class="form-text" name="" id="" cols="30" rows="10" placeholder="message"></textarea>
+                    <input class="form-box" type="text" placeholder="your name">
+                    <input class="form-box" type="email" placeholder="your email">
+                    <textarea class="form-text" name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
                 </form>             
                 <input class="button" type="submit" value="submit">  
             </div>
